--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,16 @@ jobs:
                   source .venv/bin/activate
                   python -m pip install --upgrade pip
                   pip install -r requirements.txt
-            
-                  - name: Run tests
-                  run: |
-                    source .venv/bin/activate
-                    pytest
-                  env:
-                    CI: true
+
+            - name: Run train python file
+              run: |
+                  source .venv/bin/activate
+                  python app/train.py
+
+            - name: Run tests
+              run: |
+                  source .venv/bin/activate
+                  pytest
+              env:
+                CI: true
             
