--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,12 @@ jobs:
               uses: actions/setup-python@v5
               with:
                 python-version: '3.10'
-
+            - name: Use Cache
+              uses: actions/cache@v4
+              with:
+                path: .venv
+                key: venv-${{ runner.os }}-${{ hashFiles('**/requirements.txt') }}
+                
             - name: Install dependencies
               run: |
                   python -m venv .venv
