Stage3: Modified CI file to CI/CD

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,6 +30,11 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Run train.py
+        run: |
+          . .venv/bin/activate
+          python app/train.py
+
       - name: Run tests
         run: |
           . .venv/bin/activate
