--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: CI/CD 2
+name: CI/CD
 on: [push, pull_request]
 
 jobs:
@@ -55,7 +55,7 @@ jobs:
         
       - name: Copy files to EC2
         run: |
-          scp -r -o StrictHostKeyChecking=no . ec2-user@${{ secrets.EC2_IP }}:/home/ec2-user/MLOps-EC2-practice
+          scp -r -o StrictHostKeyChecking=no . ec2-user@${{ secrets.EC2_IP }}:/home/ec2-user/ml-inference-server
 
       - name: Deploy on EC2
         run: |
