--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,19 +49,17 @@ jobs:
     
     steps:
       - name: Check out repository
+        uses: actions/checkout@v5
+
+      - name: Use SSH key  
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
       
-      - name: List files in current directory
-        run: |
-          pwd
-          ls -la
-            
 
       - name: Copy files to EC2
         run: |
-          scp -r -o StrictHostKeyChecking=no /home/runner/work/MLOps-EC2-practice/MLOps-EC2-practice/* ec2-user@${{ secrets.EC2_IP }}:/home/ec2-user/ml-inference-server
+          scp -r -o StrictHostKeyChecking=no ./* ec2-user@${{ secrets.EC2_IP }}:/home/ec2-user/ml-inference-server
 
       - name: Deploy on EC2
         run: |
